--- a/app/views/_product-tile.html.erb
+++ b/app/views/_product-tile.html.erb
@@ -1,14 +1,41 @@
 <div class='product-tile'>
-	<div class='image-and-title'>
-		<div class='image'>
-			<%= image_tag('missing_image_100_67.gif') %>
-		</div>
-		<div class='title'>
-			<%= link_to(product.name, product) %>
-		</div>
-	</div>
-	<div class='strapline'>
-		<%= product.strapline %><br />
-		<%= pluralize(product.variants.size, 'variant') %>
-	</div>
+  <div class='image-and-title'>
+	  <div class='image'>
+		  <%= image_tag('missing_image_100_67.gif') %>
+	  </div>
+	  <div class='title'>
+		  <%= link_to(product.name, product) %>
+	  </div>
+  </div>
+  <div class='strapline'>
+	  <%= product.strapline %><br />
+	  <hr>
+	    <% @variants = product.variants.find(:all, :order => :sku)%>
+	    <div class="counter">
+	      <%= pluralize(@variants.size, 'Published variant') %>:
+      </div>
+	    <table>
+	    <% product.variants.each do |variant| %>
+	      <tr>
+	        <td>
+	          <%= "#{variant.sku} -> #{variant.price}" %>
+	        </td>
+	      </tr>
+	    <% end %>
+	    </table>
+	  <hr>
+	  <% @categories = product.categories.find(:all, :order => :name) %>
+	  <div class="counter">
+	    <%= pluralize(@categories.size, 'Published category') %>:
+	  </div>
+	  <table>
+	  <% @categories.each do |category| %>
+	    <tr>
+	      <td>
+	        <%= "#{category.name}" %>
+	      </td>
+	    </tr>
+	  <% end %>
+	  </table>
+  </div>
 </div>
