--- a/app/views/administration/variants/_form.html.erb
+++ b/app/views/administration/variants/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@variant, :url => administration_variants_path) do |f| %>
+<%= form_for(@variant, :method => 'update', :url => administration_variants_path) do |f| %>
   <% if @variant.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@variant.errors.count, "error") %> prohibited this variant from being saved:</h2>
