Added a price range for all variants for each product in the product_tile class

--- a/app/views/_product-tile.html.erb
+++ b/app/views/_product-tile.html.erb
@@ -18,6 +18,7 @@
       <tr>
         <td>
           <%= "#{variant.sku} :: #{variant.price}" %>
+          <%= "[#{min_variant_price(variant)} - #{max_variant_price(variant)}]" %>
         </td>
       </tr>
     <% end %>
