Added a cool static map to the admin page.. I should make this page look much better

--- a/app/views/administration/home/home.html.erb
+++ b/app/views/administration/home/home.html.erb
@@ -1,1 +1,1 @@
-home
+<img class="map" src="http://maps.googleapis.com/maps/api/staticmap?size=400x400&sensor=false&zoom=15&markers=51.52010,-0.10313"></img>
