--- a/app/views/_product-tile.html.erb
+++ b/app/views/_product-tile.html.erb
@@ -7,18 +7,32 @@
 			<%= link_to(product.name, product) %>
 		</div>
 	</div>
- 
+
   <div class='strapline'>
-		<%= product.strapline %><br />
-		<%= pluralize(product.variants.size, 'variant') %>
+		<%= product.strapline %><hr>
+		<%= pluralize(product.variants.size, 'variant') %>:
   </div>
-  <hr> 
   <table>
     <% product.variants.each do |variant| %>
       <tr>
         <td>
           <%= "#{variant.sku} :: #{variant.price}" %>
           <%= "[#{min_variant_price(variant)} - #{max_variant_price(variant)}]" %>
+        </td>
+      </tr>
+    <% end %>
+  </table>
+
+  <hr>
+  <% @categories = product.categories.find(:all, :order => :name) %>
+  <div class="counter">
+    <%= pluralize(@categories.size, 'Published category') %>:
+  </div>
+  <table>
+    <% @categories.each do |category| %>
+      <tr>
+        <td>
+          <%= "#{category.name}" %>
         </td>
       </tr>
     <% end %>
