--- a/app/views/administration/products/_form.html.erb
+++ b/app/views/administration/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@product, :url => administration_products_path) do |f| %>
+<%= form_for(@product,:method => 'update', :url => administration_products_path) do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
