1.Added text field to the main page for future improvements. 2.Added functionallity to the administration/products page that allows order by clicking the selected header

--- a/app/views/administration/products/index.html.erb
+++ b/app/views/administration/products/index.html.erb
@@ -3,10 +3,10 @@
 <table>
     <tr align="left"> 
         <th>Selected</th>
-        <th>Name</th>
-        <th>Subcode</th>
+        <th><%=link_to 'Product', :sort => 'name' %></th>
+        <th><%=link_to 'Subcode', :sort => 'subcode' %> </th>
         <th>Url segment</th>
-        <th>Published status</th>
+        <th><%=link_to 'Published Status', :sort => 'status' %></th>
         <th>Categories</th>
         <th></th>
         <th></th>
